objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountSource__c</fullName>
        <formula>if(ISBLANK(TEXT(Account.AccountSource)) = TRUE
,TEXT(LeadSource)
,TEXT(Account.AccountSource)
)</formula>
        <label>AccountSource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Company_Key__c</fullName>
        <formula>Account.Porch_com_Company_Key_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Company Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.Company_E_mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Activity__c</fullName>
        <formula>Account.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_ProType__c</fullName>
        <formula>TEXT(Account.Pro_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ProType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tag__c</fullName>
        <formula>Account.Account_Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_status__c</fullName>
        <formula>text(Account.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_QuickBooks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to QuickBooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts_to_Contact__c</fullName>
        <label>Attempts to Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Check_Completed_Date__c</fullName>
        <label>Background Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <formula>Account.Batch_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Risk_Score__c</fullName>
        <label>Cancellation Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Care_Package_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care Package Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Childrens_Names__c</fullName>
        <label>Children&apos;s Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claimed_Date__c</fullName>
        <formula>Account.Claimed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claimed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company_Key_Copy__c</fullName>
        <description>Not to be displayed on the layout; created to prevent accidental merging of accounts</description>
        <label>Company Key Copy</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Account_Owner__c</fullName>
        <formula>IF (OwnerId  &lt;&gt;  Account.OwnerId, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner = Account Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County_Population__c</fullName>
        <formula>Account.County_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_not_meet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did not meet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Batch_Assignment__c</fullName>
        <formula>Account.Account_Reassignment_Email_Batch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Batch Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Estimate Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Enroll.Porch.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up - Decision Maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_Account__c</fullName>
        <label>Facebook Account</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Geo_Score__c</fullName>
        <description>Calculated Score based on Zip Code Slots, Ability to Serve and Demographic Data</description>
        <inlineHelpText>Calculated Score based on Zip Code Slots, Ability to Serve and Demographic Data</inlineHelpText>
        <label>Geo Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Signals whether or not a Lowe&apos;s employee is still employed at a location</description>
        <label>Is Active Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Dashboard_View__c</fullName>
        <label>Last Dashboard View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Project_Upload__c</fullName>
        <label>Last Project Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lowe_s_Department__c</fullName>
        <label>Lowe&apos;s Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowe_s_Role__c</fullName>
        <label>Lowe&apos;s Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowe_s_Store__c</fullName>
        <label>Lowe&apos;s Store</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Asst_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Assistants Phone</description>
        <formula>IF( 
        LEN( AssistantPhone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(AssistantPhone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   AssistantPhone , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Assistants Phone</inlineHelpText>
        <label>NVM Asst. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Home_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Home Phone</description>
        <formula>IF( 
        LEN( HomePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(HomePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   HomePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Home Phone</inlineHelpText>
        <label>NVM Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Other_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Other Phone</description>
        <formula>IF( 
        LEN( OtherPhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(OtherPhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   OtherPhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Other Phone</inlineHelpText>
        <label>NVM Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <label>Partner Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Key__c</fullName>
        <label>Person Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Porch_Captain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lowe&apos;s Partner responsible for updating associated with Porch news/updates  in store</description>
        <label>Porch Captain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Porch_Cares__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Porch Cares</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Porch_Champ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Porch Champ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Porch_com_Company_Key_ID__c</fullName>
        <label>Porch.com Company Key ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porch_com_User_Key_ID__c</fullName>
        <externalId>true</externalId>
        <label>Porch.com User Key ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that issue is reported in store.</description>
        <label>Red Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Skype_ID__c</fullName>
        <label>Skype ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Phone__c</fullName>
        <description>Smart Phone OS</description>
        <label>Smart Phone</label>
        <picklist>
            <picklistValues>
                <fullName>IOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up the account status that a contact rolls up to</description>
        <label>Account delete</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_To_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>if( ISBLANK(Phone),&quot;G&quot;, 

if( CONTAINS(&quot;206:209:213:253:310:323:360:408:415:425:503:509:510:530:559:562:604:619:626:650:661:702:707:714:760:775:778:805:818:831:858:867:909:916:925:949:951:971:236:250:604:778:867&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;F&quot;, 

if( 
CONTAINS(&quot;208:250:303:307:385403:406:435:480:505:520:602:623:719:720:780:801:928:970:403:587:780&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;E&quot;, 

if( 
CONTAINS(&quot;204:205:210:214:217:218:224:225:228:251:254:256:262:270:281:306:308:309:312:314:316:318:319:320:325:334:337:361:402:405:409:414:417:430:432:469:479:501:504:507:512:515:563:573:580:601:605:608:612:615:618:620:630:636:641:651:660:662:682:708:712:713:715:731:763:769:773:785:806:815:816:817:830:832:847:901:903:913:915:918:920:931:936:940:952:956:972:979:985:204:306:431:639:807&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;D&quot;, 

if( 
CONTAINS(&quot;201:202:203:207:212:215:216:219:226:229:231:234:239:240:248:252:267:269:276:289:301:302:304:305:313:315:321:330:336:339:345:347:351:352:386:404:407:410:412:416:418:419:434:438:440:443:450:470:475:478:484:502:508:513:514:516:517:518:519:540:551:561:567:570:571:585:586:603:606:607:609:610:613:614:616:617:631:646:647:649:678:703:704:705:706:716:717:718:724:727:732:734:740:754:757:770:772:774:781:786:802:803:804:810:813:814:819:828:835:843:845:848:856:857:859:860:862:863:864:865:876:878:904:905:908:910:912:914:917:919:937:941:947:954:959:973:978:980:226:249:289:343:365:416:437:438:450:514:519:579:581:613:647:705:819:873:905&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;C&quot;, 

if( 
CONTAINS(&quot;506:709:902&quot;,LEFT(SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;B&quot;, 

if( 
CONTAINS(&quot;800:877&quot;,LEFT(SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;Toll Free&quot;,&quot;G&quot;

)

))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_2__c</fullName>
        <label>Website 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoHo_Contact_ID__c</fullName>
        <label>ZoHo Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Home_Management</fullName>
        <active>true</active>
        <description>Contact type for Home Management and Home Assistant Users</description>
        <label>Home Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pro_Network</fullName>
        <active>true</active>
        <description>Contact type for Pro Network and Inside Sales</description>
        <label>Pro Network</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Attach_to_Existing_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK (Company_Key_Copy__c)),
  ISNEW(),
   Account_Company_Key__c  &lt;&gt;   Company_Key_Copy__c  
)</errorConditionFormula>
        <errorMessage>Cannot Attach to an Account with an existing company key</errorMessage>
    </validationRules>
</CustomObject>